Adiçao de foto e do Sobre mim

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio - José Antônio Moura Neto</title>
 </head>
 <body>
-    
+    <h1>Meu Portfolio</h1>
+    <h2>José Antônio Moura Neto</h2>
+    <img src=/images/eu.jpg width="280">
+    <h2>Sobre mim:</h2>
+    <p>Natural do município de Itabaiana/SE, tenho 26 anos, sou formado em direito, atuei como advogado por cerca de 5 anos, porém sempre tive o sonho de trabalhar na área da tecnologia, sonho este que está cada vez mais próximo de se concretizar graças à <strong>TRYBE!</strong></p>
+
+
 </body>
 </html>
