inclusao da parte pontos importantes sobre mim

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 <body>
     <h1>Meu Portfolio</h1>
     <h2>José Antônio Moura Neto</h2>
-    <img src=/images/eu.jpg width="280">
+    <img src=/images/eu.jpg width="280" alt="Foto de José Antônio Moura Neto">
     <h2>Sobre mim:</h2>
     <p>Natural do município de Itabaiana/SE, tenho 26 anos, sou formado em direito, atuei como advogado por cerca de 5 anos, porém sempre tive o sonho de trabalhar na área da tecnologia, sonho este que está cada vez mais próximo de se concretizar graças à <strong>TRYBE!</strong></p>
+    <h2>Pontos importantes sobre mim:</h2>
+    <ul>
+        <li>Adoro interagir com outras pessoas</li>
+        <li>Facilidade em me comunicar com pessoas novas</li>
+        <li>Assimilação rápida de novos conteúdos</li>
+        <li>Vontade de aprender e coragem para pesquisar</li>
+        <li>Grande paixão por tecnologia</li>
+        <li>Paciência de sobra</li>
+    </ul>
 
 
 </body>
