--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Portfolio - José Antônio Moura Neto</title>
 </head>
 <body>
-    <h1>Meu Portfolio</h1>
+    <h1><em>Meu Portfolio</em></h1>
     <h2>José Antônio Moura Neto</h2>
     <img src=/images/eu.jpg width="280" alt="Foto de José Antônio Moura Neto">
-    <h2>Sobre mim:</h2>
+    <ul>
+        <li>Sobre mim</li>
+        <li>Pontos importantes sobre mim</li>
+        <li>Links externos</li>
+    </ul>
+    <h2><em>Sobre mim:</em></h2>
     <p>Natural do município de Itabaiana/SE, tenho 26 anos, sou formado em direito, atuei como advogado por cerca de 5 anos, porém sempre tive o sonho de trabalhar na área da tecnologia, sonho este que está cada vez mais próximo de se concretizar graças à <strong>TRYBE!</strong></p>
-    <h2>Pontos importantes sobre mim:</h2>
+    <h2><em>Pontos importantes sobre mim:</em></h2>
     <ul>
         <li>Adoro interagir com outras pessoas</li>
         <li>Facilidade em me comunicar com pessoas novas</li>
@@ -21,7 +26,9 @@
         <li>Grande paixão por tecnologia</li>
         <li>Paciência de sobra</li>
     </ul>
-
+    <h2><em>Links externos:</em></h2>
+    <a href="https://github.com/JAMNeto" target="_blank">GitHub</a><br>
+    <a href="https://www.instagram.com/mouraaneto/" target="_blank">Instagram</a>
 
 </body>
 </html>
