Correçao do indice

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h2>José Antônio Moura Neto</h2>
     <img src=/images/eu.jpg width="280" alt="Foto de José Antônio Moura Neto">
     <ul>
-        <li>Sobre mim</li>
-        <li>Pontos importantes sobre mim</li>
-        <li>Links externos</li>
+        <li><a href="#sobre">Sobre mim</a></li>
+        <li><a href="#pontos">Pontos importantes sobre mim</a></li>
+        <li><a href="#links">Links externos</a></li>
     </ul>
-    <h2><em>Sobre mim:</em></h2>
+    <h2 id="sobre"><em>Sobre mim:</em></h2>
     <p>Natural do município de Itabaiana/SE, tenho 26 anos, sou formado em direito, atuei como advogado por cerca de 5 anos, porém sempre tive o sonho de trabalhar na área da tecnologia, sonho este que está cada vez mais próximo de se concretizar graças à <strong>TRYBE!</strong></p>
-    <h2><em>Pontos importantes sobre mim:</em></h2>
+    <h2 id="pontos"><em>Pontos importantes sobre mim:</em></h2>
     <ul>
         <li>Adoro interagir com outras pessoas</li>
         <li>Facilidade em me comunicar com pessoas novas</li>
@@ -26,7 +26,7 @@
         <li>Grande paixão por tecnologia</li>
         <li>Paciência de sobra</li>
     </ul>
-    <h2><em>Links externos:</em></h2>
+    <h2 id="links"><em>Links externos:</em></h2>
     <a href="https://github.com/JAMNeto" target="_blank">GitHub</a><br>
     <a href="https://www.instagram.com/mouraaneto/" target="_blank">Instagram</a>
 
