Atualização do link instagram

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <h2 id="links"><em>Links externos:</em></h2>
     <a href="https://github.com/JAMNeto" target="_blank">GitHub</a><br>
-    <a href="https://www.instagram.com/mouraaneto/" ,target="_blank">Instagram</a><br>
+    <a href="https://www.instagram.com/mouraaneto/" target="_blank">Instagram</a><br>
     <a href="#foto">Foto</a>
 
 
