--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1><em>Meu Portfolio</em></h1>
     <h2>José Antônio Moura Neto</h2>
-    <img id="foto" src=/images/eu.jpg width="280" alt="Foto de José Antônio Moura Neto">
+    <img id="foto" src=JAMNeto.github.io/images/eu.jpg width="280" alt="Foto de José Antônio Moura Neto">
     <ul>
         <li><a href="#sobre">Sobre mim</a></li>
         <li><a href="#pontos">Pontos importantes sobre mim</a></li>
@@ -27,6 +27,7 @@
         <li>Paciência de sobra</li>
     </ul>
     <h2 id="links"><em>Links externos:</em></h2>
+    <a href="https://www.linkedin.com/in/jamouraneto/" target="_blank">LinkedIn</a><br>
     <a href="https://github.com/JAMNeto" target="_blank">GitHub</a><br>
     <a href="https://www.instagram.com/mouraaneto/" ,target="_blank">Instagram</a><br>
     <a href="#foto">Foto</a>
